Resolved text overlapping issue; deleted redundant image file and separated style file for better maintenance

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -165,89 +165,6 @@ div.formHelpers {
   outline: none;
 }
 
-.empha{
-    opacity: 1;
-    margin:2% 2%;
-    font-size: 30;
-    font-weight: bolder;
-}
-
-.exp{
-    margin-top: 5%;
-    margin-bottom: 5%;
-}
-
-.description{
-    font-style: italic;
-    font-size: x-large;
-    display: flex;
-    align-items: center;
-    padding-left: 5%;
-    padding-right: 5%;
-    margin: 5%, 4%;
-}
-
-.image{
-    width: 50%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    margin-bottom: 10px
-}
-
-#arrow{
-    border: solid black;
-    border-width: 0 3px 3px 0;
-    display: inline-block;
-    padding: 3px;
-    transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
-}
-
-.nav-link{
-    margin-left: 2%;
-    margin-right: 2%;
-    padding-left: 1%;
-    padding-right:1%;
-}
-
-.back{
-    background: url("/static/images/background.jpg");
-    background-size: 100%;
-    background-position: center;
-    padding: 2%;
-    margin-top: 0;
-    margin-bottom: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: cover;
-    height: 500px;
-}
-
-.info{
-    opacity: 1;
-    color:white
-}
-
-.backhis{
-    padding-left: 10%;
-    padding-right: 10%;
-    border-radius:15px;
-}
-
-#logo{
-    color: rgba(255, 255, 255, 0.978);
-    font-size: 30px;
-}
-
-#slogan{
-    color:rgba(255, 255, 255, 0.978);
-    font-size: 50px;
-    font-weight: bold;
-}
-
 thead {
     border-bottom: var(--bs-list-group-border-width) solid var(--bs-list-group-border-color);
 }
